[package]
name = "pms-backend"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
pms-master = { git = "https://github.com/pms-oj/pms-master" }
judge-protocol = { git = "https://github.com/pms-oj/judge-protocol" }
async-std = { version = "1.12.0", features = ["attributes"] }
log = "0.4.17"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.2.1"
actix-identity = "0.5.2"
actix-redis = "0.12.0"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
log4rs = "1.1.1"
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
ckydb = { git = "https://github.com/pms-oj/ckydb.git" }
sha3 = "0.10.5"
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6", features = ["serde"] }
lcid = { git = "https://github.com/pms-oj/lcid-rs.git" }
async-graphql = { version = "4", features = ["uuid", "chrono", "chrono-tz"] }
async-graphql-actix-web = "4"
thiserror = "1"
actix = "0.13"
futures-util = "0.3"
num_cpus = "1.13.1"
simd-json = { git = "https://github.com/simd-lite/simd-json.git", rev = "90144db" }

[dependencies.uuid]
version = "1.1.2"
features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
env_logger = "0.9.1"